# BufferLibCpp

./: .gitignore  BufferLib.natvis  CMakeLists.txt  LICENSE  README.md
include/: array_buffer.h  bufferlib_common.h
test/: CMakeLists.txt  helpers.h  test_ArrayBuffer.cpp
